--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           ~/.cache/go-build
           ~/Library/Caches/go-build
           ~/AppData/Local/go-build
-        key: test/${{ matrix.os }}/${{ matrix.go-version }}/${{ hashFiles('go.sum') }}/{{ github.sha }}
+        key: test/${{ matrix.os }}/${{ matrix.go-version }}/${{ hashFiles('go.sum') }}/${{ github.sha }}
         restore-keys: test/${{ matrix.os }}/${{ matrix.go-version }}/${{ hashFiles('go.sum') }}/
     - name: Set up Go
       uses: actions/setup-go@v2
@@ -82,7 +82,7 @@ jobs:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: buildall/${{ matrix.os }}/1.15.x/${{ hashFiles('go.sum') }}/{{ github.sha }}
+        key: buildall/${{ matrix.os }}/1.15.x/${{ hashFiles('go.sum') }}/${{ github.sha }}
         restore-keys: buildall/${{ matrix.os }}/1.15.x/${{ hashFiles('go.sum') }}
     - name: Set up Go
       uses: actions/setup-go@v2
