--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
       run: go test -race ./...
     - name: Generate test coverage
       if: matrix.go-version == '1.15.x'
+      shell: bash
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
     - name: Save test coverage
       if: matrix.go-version == '1.15.x'
