--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,11 @@ on:
   push:
   pull_request:
 
+defaults:
+  run:
+    # PowerShell's behavior for -flag=value is undesirable, so run all commands with bash.
+    shell: bash
+
 jobs:
 
   test:
@@ -40,7 +45,6 @@ jobs:
       run: go test -race ./...
     - name: Generate test coverage
       if: matrix.go-version == '1.15.x'
-      shell: bash
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
     - name: Save test coverage
       if: matrix.go-version == '1.15.x'
