--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,11 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Test with race detection
       run: go test -race ./...
+    - name: Set ostype to ${{ matrix.os }}
+      run: echo ostype=${{ matrix.os }} >> $GITHUB_ENV
+    - name: Set ostype to linux
+      if: matrix.os == 'ubuntu'
+      run: echo ostype=linux >> $GITHUB_ENV
     - name: Generate test coverage
       if: matrix.go-version == '1.15.x'
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
@@ -50,33 +55,28 @@ jobs:
       if: matrix.go-version == '1.15.x'
       uses: actions/upload-artifact@v2
       with:
-        name: cover-${{ matrix.os }}
+        name: cover-${{ env.ostype }}
         path: cover
 
   upload-coverage:
     name: Upload test coverage
     strategy:
       matrix:
-        os: [ubuntu, macos, windows]
+        ostype: [linux, macos, windows]
     needs: test
     runs-on: ubuntu-latest
     steps:
-    - name: Set ostype to matrix.os
-      run: echo ostype=${{ matrix.os }} >> $GITHUB_ENV
-    - name: Set ostype to linux
-      if: matrix.os == 'ubuntu'
-      run: echo ostype=linux >> $GITHUB_ENV
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Download test coverage
       uses: actions/download-artifact@v2
       with:
-        name: cover-${{ matrix.os }}
+        name: cover-${{ matrix.ostype }}
     - name: Upload coverage to codecov
       uses: codecov/codecov-action@v1
       with:
         files: ./cover
-        flags: ${{ env.ostype }}
+        flags: ${{ matrix.ostype }}
 
   buildall:
     name: Build binaries
