website: Update the get page.
* Add TOC.

* Tweak the OS packages section a bit.

* Unbreak the NEXT-RELEASE link by creating it as a symlink.

Also remove an unnecessary "./" in Makefile.

--- a/website/Makefile
+++ b/website/Makefile
@@ -14,7 +14,7 @@ default: gen
 
 # Generates the website into the dst directory.
 gen: tools $(HTMLS)
-	./$(TOOLS_DIR)/genblog.bin . $(DST_DIR)
+	$(TOOLS_DIR)/genblog.bin . $(DST_DIR)
 	ln -sf `pwd`/fonts.css `pwd`/favicons/* $(DST_DIR)/
 
 tools:
