website/learn: Add an FAQ page.
This page supersedes the "name" and "philosophy" pages, which have been removed.
HTTP 301 redirects will be set up on the server of elv.sh to keep the old URLs
valid.

--- a/website/learn/index.toml
+++ b/website/learn/index.toml
@@ -17,9 +17,5 @@ name = "effective-elvish"
 title = "Effective Elvish"
 
 [[articles]]
-name = "name"
-title = "The Name"
-
-[[articles]]
-name = "philosophy"
-title = "The Philosophy"
+name = "faq"
+title = "FAQ"
