website/learn: Add new "quick tour" doc.
Also remove the cookbook doc as it is superseded by this new doc.

--- a/website/learn/index.toml
+++ b/website/learn/index.toml
@@ -1,12 +1,13 @@
 autoIndex = true
 
 [[articles]]
-name = "fundamentals"
-title = "Fundamentals"
+name = "tour"
+title = "Quick Tour"
+extraCSS = ["tour.css"]
 
 [[articles]]
-name = "cookbook"
-title = "Cookbook"
+name = "fundamentals"
+title = "Fundamentals"
 
 [[articles]]
 name = "unique-semantics"
