--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -17,6 +17,10 @@ name = "epm"
 title = "epm: The Elvish Package Manager"
 
 [[articles]]
+name = "file"
+title = "file: File Utilities"
+
+[[articles]]
 name = "math"
 title = "math: Math Utilities"
 
