--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,10 @@
-image: golang:latest
+image: golang:alpine
 
 variables:
   REPO_NAME: gitlab.com/elves/elvish
 
 before_script:
   - go version
-#  - mkdir -p $GOPATH/src/$(dirname $REPO_NAME)
-#  - ln -svf $CI_PROJECT_DIR $GOPATH/src/$REPO_NAME
-#  - cd $GOPATH/src/$REPO_NAME
 
 stages:
   - test
@@ -21,6 +18,7 @@ test:
 deploy:
   stage: deploy
   script:
+    - apk add zip
     - ./tools/buildall.sh . _bin HEAD
   artifacts:
     paths:
