Rename directory for binary artifacts to just "bin".

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ deploy:
   stage: deploy
   script:
     - apk add zip
-    - ./tools/buildall.sh . _bin HEAD
+    - ./tools/buildall.sh . bin HEAD
   artifacts:
     paths:
-      - _bin
+      - bin
