--- a/.codecov.yml
+++ b/.codecov.yml
@@ -7,6 +7,8 @@ coverage:
 comment: false
 ignore:
   # Exclude test helpers from coverage calculation.
+  #
+  # The following patterns are also consumed by a hacky sed script in tools/prune-cover.sh.
   - "pkg/cli/clitest"
   - "pkg/eval/evaltest"
   - "pkg/eval/vals/testutils.go"
