--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.x
     - name: Set up goimports
       run: go install golang.org/x/tools/cmd/goimports@latest
     - name: Check style
@@ -145,6 +147,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.x
     - name: Set up staticcheck
       run: go install honnef.co/go/tools/cmd/staticcheck@2021.1
     - name: Run linters
