Add doc for the Elvish command.
The new page documents the new XDG-compliant search paths, among other things.

This resolves #383.

--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -6,6 +6,10 @@ name = "language"
 title = "Language Specification"
 
 [[articles]]
+name = "command"
+title = "The Elvish Command"
+
+[[articles]]
 name = "builtin"
 title = "Builtin Functions and Variables"
 
