--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,9 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
     - name: Test with race detection
-      run: go test -race ./...
+      run: |
+        go test -race ./...
+        cd website; go test -race ./...
     - name: Set ostype to ${{ matrix.os }}
       run: echo ostype=${{ matrix.os }} >> $GITHUB_ENV
     - name: Set ostype to linux
