--- a/.codespellrc
+++ b/.codespellrc
@@ -1,2 +1,2 @@
 [codespell]
-ignore-words-list = upto,nd,ba,doas,fo,struc,indicies,shouldbe,iterm,lates,testof
+ignore-words-list = upto,nd,ba,doas,fo,struc,shouldbe,iterm,lates,testof
