--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -14,6 +14,8 @@ test_task:
       env:
         # gccgo doesn't support race test
         TEST_FLAG: ""
+      # Debian's gccgo hasn't caught up with Go 1.16 yet
+      allow_failures: true
     - name: Test on FreeBSD
       freebsd_instance:
         image_family: freebsd-12-1
