Update website checking script.
- Add sleep between checks

- Add output when check succeeds

--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -16,10 +16,12 @@ jobs:
         for i in `seq 30`; do
           website_ts=$(curl https://elv.sh/commit-ts.txt)
           if test "$website_ts" -ge "$ts"; then
+            echo "website ($website_ts) >= current ($ts)"
             exit 0
           else
             echo "website ($website_ts) < current ($ts)"
           fi
+          sleep 60
         done
         echo "Timeout"
         exit 1
