website: Serve fonts as individual files.
Upsides:

- Removing the render-blocking fonts.css allows the page to be visible while the
  font is being loaded.

- The original WOFF2 files are smaller than the base64-encoded version in
  fonts.css.

- Browsers may be smart enough to not download fonts that are not needed.

The only downside is that this requires the browser to make more requests - up
to 6 for all 6 font files. But this is not a problem with modern browsers.

--- a/website/Makefile
+++ b/website/Makefile
@@ -17,7 +17,8 @@ default: gen
 # Generates the website into the dst directory.
 gen: tools $(HTMLS)
 	$(TOOLS_DIR)/genblog.bin . $(DST_DIR)
-	ln -sf `pwd`/fonts.css `pwd`/favicons/* $(DST_DIR)/
+	ln -sf `pwd`/fonts `pwd`/favicons/* $(DST_DIR)/
+	rm -f $(DST_DIR)/fonts.css # clean up leftover fonts.css
 
 # Generates docset into Elvish.docset.
 docset: tools $(HTMLS)
