website: Rewrite Makefile.
* Reorder the targets to be top-down

* Make the tool binaries individual real targets, rather than a phony target

* Use .SECONDEXPANSION to determine dependencies of tool binaries and HTML outputs precisely

--- a/website/Makefile
+++ b/website/Makefile
@@ -1,4 +1,3 @@
-TOOLS_DIR := ./tools
 DST_DIR := ./_dst
 PUBLISH_DIR := ./_publish
 DOCSET_TMP_DIR := ./_docset_tmp
@@ -7,40 +6,33 @@ DOCSET_DST_DIR := ./Elvish.docset
 MDS := home.md $(filter-out %/README.md,$(wildcard [^_]*/*.md))
 HTMLS := $(MDS:.md=.html)
 
-TOOLS := highlight macros elvdoc genblog
+TOOL_PKGS := highlight macros elvdoc genblog
+TOOL_BINS := $(addprefix tools/,$(addsuffix .bin,$(TOOL_PKGS)))
 
-default: gen
-
-%.html: %.md $(TOOL_BINARIES) $(TOOLS_DIR)/md-to-html
-	$(TOOLS_DIR)/md-to-html $< $@
-
-# Generates the website into the dst directory.
-gen: tools $(HTMLS)
-	$(TOOLS_DIR)/genblog.bin . $(DST_DIR)
+# Generates the website into $(DST_DIR).
+gen: $(TOOL_BINS) $(HTMLS)
+	tools/genblog.bin . $(DST_DIR)
 	ln -sf `pwd`/fonts `pwd`/favicons/* $(DST_DIR)/
-	rm -f $(DST_DIR)/fonts.css # clean up leftover fonts.css
 
-# Generates docset into Elvish.docset.
-docset: tools $(HTMLS)
-	ELVISH_DOCSET_MODE=1 $(TOOLS_DIR)/genblog.bin . $(DOCSET_TMP_DIR)
+# Generates docset into $(DOCSET_DST_DIR).
+docset: $(TOOL_BINS) $(HTMLS)
+	ELVISH_DOCSET_MODE=1 tools/genblog.bin . $(DOCSET_TMP_DIR)
 	./tools/mkdocset $(DOCSET_TMP_DIR) $(DOCSET_DST_DIR)
 
-tools:
-	for tool in $(TOOLS); do \
-		go build -o $(TOOLS_DIR)/$$tool.bin ./cmd/$$tool; \
-	done
-
-genblog:
-	: # a nop, kept for backward compatibility with elves/up
-	
-# Synchronizes the generated website into $(PUBLISH_DIR). The PUBLISH_DIR
-# environment variable can be overridden to a remote place to publish this online.
+# Synchronizes the generated website into $(PUBLISH_DIR), which is passed to
+# rsync and can be a remote place.
 publish: gen
 	rsync -aLv --delete ./_dst/ $(PUBLISH_DIR)/
 
 clean:
-	rm -f $(HTMLS) _tools/*.bin
-	rm -rf $(DST_DIR) $(DOCSET_TMP_DIR) $(DOCSET_DST_DIR)
+	rm -rf $(TOOL_BINS) $(HTMLS) $(DST_DIR) $(DOCSET_TMP_DIR) $(DOCSET_DST_DIR)
 
-.PHONY: default gen tools genblog publish clean
-.SECONDARY: $(TOOL_BINARIES)
+.PHONY: gen docset publish clean
+
+.SECONDEXPANSION:
+
+tools/%.bin: cmd/% $$(wildcard cmd/%/*.go)
+	go build -o $@ ./$<
+
+%.html: %.md $(TOOL_BINS) tools/md-to-html $$(shell tools/ref-deps $$@)
+	tools/md-to-html $< $@
