--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,7 +183,7 @@ jobs:
       with:
         go-version: 1.17.x
     - name: Install pandoc
-      run: apt install pandoc
+      run: sudo apt install pandoc
     - name: Install Python dependencies
       run: pip install beautifulsoup4
     - name: Check relative links
