--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,19 +173,11 @@ jobs:
   check-rellinks:
     name: Check relative links
     runs-on: ubuntu-latest
+    container:
+      image: theelves/up
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17.x
-    - name: Install pandoc
-      run: sudo apt install pandoc
-    - name: Install Python dependencies
-      run: pip install beautifulsoup4
     - name: Check relative links
       run: make -C website check-rellinks
 
