Use "shell: sh" to the check-rellinks step.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,6 +175,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: theelves/up
+    defaults:
+      run:
+        shell: sh
     steps:
     - name: Set up workspace
       run: |
