Fix permission of /go in check-rellinks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,6 +180,8 @@ jobs:
       run:
         shell: sh
     steps:
+    - name: Set up /go
+      run: chown 1001 /go
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Check relative links
