--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,7 +181,7 @@ jobs:
         shell: sh
     steps:
     - name: Set up /go
-      run: chown 1001 /go
+      run: sudo chown 1001 /go
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Check relative links
