--- a/.codecov.yml
+++ b/.codecov.yml
@@ -11,7 +11,7 @@ ignore:
   # The following patterns are also consumed by a hacky sed script in tools/prune-cover.sh.
   - "pkg/cli/clitest"
   - "pkg/eval/evaltest"
-  - "pkg/eval/vals/testutils.go"
+  - "pkg/eval/vals/tester.go"
   - "pkg/prog/progtest"
   - "pkg/store/storetest"
   - "pkg/testutil/must.go"
