website: Make the tool dependency for %.html more accurate.
Only depend on the tools referenced by tools/md-to-html. This uses "grep -o",
which is not part of POSIX but is supported by both GNU and BSD greps, so widely
enough.

--- a/website/Makefile
+++ b/website/Makefile
@@ -6,18 +6,17 @@ DOCSET_DST_DIR := ./Elvish.docset
 MDS := home.md $(filter-out %/README.md,$(wildcard [^_]*/*.md))
 HTMLS := $(MDS:.md=.html)
 
-TOOL_PKGS := highlight macros elvdoc gensite
-TOOL_BINS := $(addprefix tools/,$(addsuffix .bin,$(TOOL_PKGS)))
+MD_TO_HTML_TOOLS = $(addprefix tools/,$(shell grep -o '\w*\.bin' tools/md-to-html))
 
 # Generates the website into $(DST_DIR).
-gen: $(TOOL_BINS) $(HTMLS)
+gen: tools/gensite.bin $(HTMLS)
 	tools/gensite.bin . $(DST_DIR)
 	ln -sf `pwd`/fonts `pwd`/favicons/* $(DST_DIR)/
 
 # Generates docset into $(DOCSET_DST_DIR).
-docset: $(TOOL_BINS) $(HTMLS)
+docset: tools/gensite.bin $(HTMLS)
 	ELVISH_DOCSET_MODE=1 tools/gensite.bin . $(DOCSET_TMP_DIR)
-	./tools/mkdocset $(DOCSET_TMP_DIR) $(DOCSET_DST_DIR)
+	tools/mkdocset $(DOCSET_TMP_DIR) $(DOCSET_DST_DIR)
 
 # Synchronizes the generated website into $(PUBLISH_DIR), which is passed to
 # rsync and can be a remote place.
@@ -28,17 +27,17 @@ check-rellinks: gen
 	python3 tools/check-rellinks.py $(DST_DIR)
 
 clean:
-	rm -rf $(TOOL_BINS) $(HTMLS) $(DST_DIR) $(DOCSET_TMP_DIR) $(DOCSET_DST_DIR)
+	rm -rf tools/*.bin $(HTMLS) $(DST_DIR) $(DOCSET_TMP_DIR) $(DOCSET_DST_DIR)
 
 ttyshot/%.html:
 	@echo Exclude ttyshots from the pattern rule for %.html
 
-.PHONY: gen docset publish clean
+.PHONY: gen docset publish check-rellinks clean
 
 .SECONDEXPANSION:
 
 tools/%.bin: cmd/% $$(wildcard cmd/%/*.go)
 	go build -o $@ ./$<
 
-%.html: %.md $(TOOL_BINS) tools/md-to-html $$(shell tools/extra-deps $$@)
+%.html: %.md tools/md-to-html $(MD_TO_HTML_TOOLS) $$(shell tools/extra-deps $$@)
 	tools/md-to-html $< $@
